# rulesify

./: .gitignore  .rulesify.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  registry.toml  yaml_test
.cursor/rules/: DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_DETAILED.md  TESTING_SUMMARY.md  rust.mdc
.github/scripts/: restore_skills.py  verify_skills.py
.github/workflows/: edge-release.yml  release-automation.yml  release-build.yml  release.yml  tests.yml  update-registry.yml  versioning.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: FEATURES.md
docs/: rulesify-demo.tape
docs/examples/: basic-usage.md
docs/plans/: 2026-04-08-rebuild-SUMMARY.md  2026-04-08-rebuild-design.md  2026-04-08-rebuild-implementation.md  2026-04-11-skills-registry-design.md  2026-04-14-contents-api-refactor.md  2026-04-14-skills-registry-implementation.md  2026-04-15-llm-classification.md  2026-04-17-enhanced-skill-selector-design.md  2026-04-17-enhanced-skill-selector.md
src/: lib.rs  main.rs
src/cli/: init.rs  mod.rs  skill.rs
src/converters/: claude_code.rs  cline.rs  cursor.rs  goose.rs  mod.rs
src/fetcher/: cache.rs  cache_tests.rs  mod.rs
src/installer/: executor.rs  executor_tests.rs  instructions.rs  instructions_tests.rs  mod.rs  tool_paths.rs  tool_paths_tests.rs
src/llm/: classifier.rs  client.rs  mod.rs  prompt.rs
src/models/: config.rs  config_tests.rs  context.rs  domain.rs  domain_tests.rs  global_config.rs  install_action.rs  install_action_tests.rs  mod.rs  project.rs  registry.rs  rule.rs  (+6 more)
templates/: typescript-style.hbs
tests/: cli_integration_tests.rs  converter_tests.rs  end_to_end_tests.rs  import_tests.rs  storage_tests.rs  sync_tests.rs  template_tests.rs  validation_tests.rs
(+56 files in other folders)
