[package]
name = "rulesify"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing AI assistant rules"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
glob = "0.3"
walkdir = "2.4"
dirs = "5.0"
